2023-12-28 Fred Kiefer <FredKiefer@gmx.de>

	* Documentation/manual/AppKit.texi: Move table of contents outside
	of title page. This fixes building the documentation with newer texinfo.

2023-12-27 Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/AppKit/NSView.h: Add ivar for NSShadow, update
	version of class for NSArchiver so this can be properly
	read and saved in .gorm files.
	* Source/GSXib5KeyedUnarchiver.m: Add code to handle XIB
	keys for NSShadow.
	* Source/NSShadow.m: Minor cleanup to use ASSIGN macro
	in -initWithCoder:
	* Source/NSView.m: Add code to -encodeWithCoder: and
	-initWithCoder: to properly handle NSViewShadow.

2023-11-27 Gregory John Casamento <greg.casamento@gmail.com>

	* Source/GSGormLoading.m
	* Source/GSNibLoading.m
	* Source/GSXibLoading.m: Remove calls to respondsToSelector:
	for awakeFromNib.  This method is now implemented on a
	category on NSObject called NSNibAwaking.  Also add a
	call to prepareForInterfaceBuilder when we are in Gorm/IB.

2023-11-25 Gregory John Casamento <greg.casamento@gmail.com>

	* Documentation/manual/applicationmakefiles.texi: Update
	documentation.
	* Documentation/manual/gnustepapplication.texi: Update
	documentation.  Update installation path default.
	* Documentation/manual/interfacefiles.texi: Update
	documentation.  Add information about model files (xib,
	nib, etc).
	* Documentation/manual/intro.texi: Update
	documentation.  Add information about themes.

2023-11-25 Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/AppKit/NSNibLoading.h: Add declaration for
	-prepareForInterfaceBuilder to NSNibLoading category.
	* Source/NSNib.m: Add new empty method implementation for
	-awakeFromNib and -prepareForInterfaceBuilder to NSNibLoading
	category on NSObject.
	* Source/NSView.m: Remove empty implementation of awakeFromNib.

2023-09-05 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/DocMakefile: Fix issue #198 ... headers had added a new