@@ -1,3 +1,8 @@
+2024-03-18 Fred Kiefer <FredKiefer@gmx.de>
+
+	* Source/NSTextView.m: Add support for NSFilenamenPboardType.
+	Change by OnFlApp (https://githup.com/onflapp)
+
 2023-12-28 Fred Kiefer <FredKiefer@gmx.de>
 
 	* Documentation/manual/AppKit.texi: Move table of contents outside
